Runs is still not working correctly

--- a/Data_CLeaning.rmd
+++ b/Data_CLeaning.rmd
@@ -91,9 +91,9 @@ batter_codes = c('S' = 1, 'D' = 2, 'T' = 3,
                  'H' = 4, 'HR' = 4, 'DGR' = 2,
                  'E' = 1, 'HP' = 1, 'I' = 1, 
                  'IW' = 1, 'W' = 1, 'C' = 1,
-                 'BK' = 0 , 'CS' = 0 , 'DI' = 0,
-                 'SB' = 0, 'PB' = 0, 'WP' = 0, 
-                 'PO' = 0, 'POCS' = 0, 'OA' = 0)
+                 'BK' = 0 , 'DI' = 0, 'SB' = 0,
+                 'PB' = 0, 'WP' = 0)
+                 #'CS' = 0 , 'PO' = 0, 'POCS' = 0, 'OA' = 0) These outcomes should still result in an out so they will not fill batter bases
 
 #Creating a mapping function to map batter_codes (basically replaces a for loop)
 #quo saves this condition rather than evaluating it. The !! and !!! are how you actually evaluate this code
@@ -125,11 +125,7 @@ game_df <- game_df %>%
          Runs = case_when(row_number() %in% new_inning ~ 0,
                           `Batter Bases`==4 ~ 1))
 
-game_df <- game_df %>% 
-  group_by(Inning, `Home Team`) %>% 
-  mutate(Outs = cumsum(is.na(`Batter Bases`))-1)
-         
-         
+
          
          # HomeRun = ifelse((!is.na(`Batter Bases`)) & (`Batter Bases` == 4), TRUE, FALSE),
          # `Inning Runs` = cumsum(HomeRun))
@@ -138,7 +134,7 @@ game_df <- game_df %>%
 
 
 
-```{r}
+```{r Expanding Runner Advancements}
 game_df <- game_df %>% 
   separate(`Runner Advancements`, into = c('Runner Advancements', 
                                            'Runner Advancements1', 
@@ -209,37 +205,208 @@ game_df <- game_df %>%
                               lag(str_detect(Outcome, "PO3")) ~ 0, #Picked Off of Third
                               TRUE ~ as.numeric(Third)),
          
-         `Runs` = case_when((str_detect(`Runner Advancements`, "-H") | 
-                            str_detect(`Runner Advancements1`, "-H") |
-                            str_detect(`Runner Advancements2`, "-H") |
-                            str_detect(`Runner Advancements3`, "-H")) ~ 
+         `Runs` = case_when((lag(str_detect(`Runner Advancements`, "(-H)")) | 
+                            lag(str_detect(`Runner Advancements1`, "(-H)")) |
+                            lag(str_detect(`Runner Advancements2`, "(-H)")) |
+                            lag(str_detect(`Runner Advancements3`, "(-H)"))) ~ 
                             
-                            (as.numeric(str_count(`Runner Advancements`,"-H")) +
-                            as.numeric(str_count(`Runner Advancements1`,"-H")) + 
-                            as.numeric(str_count(`Runner Advancements2`,"-H")) +
-                            as.numeric(str_count(`Runner Advancements3`,"-H"))),
+                            sum(as.numeric(lag(str_detect(`Runner Advancements`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements1`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements2`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements3`,"(-H)"))), na.rm=TRUE),
                             
                             #Stolen Bases
                             lag(str_detect(Outcome, "SBH")) ~ 1,
                             TRUE ~ as.numeric(Runs))) %>% 
-  fill(First, Second, Third, .direction="down")
+  fill(First, Second, Third, .direction="down") %>% 
+  mutate(Runs = ifelse(is.na(Runs), 0, Runs))
     
 
+```
+
+
+```{r Counting Runs and Outs}
+game_df <- game_df %>% 
+  group_by(Inning, `Home Team`) %>% 
+  mutate(Outs = cumsum(is.na(`Batter Bases`))-1,
+         `Inning Runs` = sum(Runs))
+
+game_df$Outs = case_when(game_df$Outs<0 ~ 0, TRUE ~ as.numeric(game_df$Outs))
+
+game_df %>% 
+  group_by(`Home Team`) %>% 
+  summarise(sum(Runs))
 
 View(game_df)
 ```
-
-Moving Runners is fixed, Need to finish Runs
+Runs is still not working!
 
 
 ```{r}
-str_detect(game_df$Outcome, "SB")
+agg_df <- expand(game_df, nesting(First, Second, Third, Outs, `Inning Runs`))
 ```
 
 
 
-```{r}
-rownames(game_df)
+```{r Creating function}
+
+get_results <- function(game_codes){
+  
+  plays = str_subset(game_codes, 'play')
+
+  game_df = read_csv(plays, col_names = c('Play', 
+                                'Inning', 
+                                'Home Team', 
+                                'Retro ID', 
+                                'Count on Play', 
+                                'Pitch Sequence',
+                                'Outcome'))
+  
+  game_df <- game_df %>% 
+    separate(Outcome, into = c('Outcome', 'Runner Advancements'),"[.]", extra = "merge") %>% #Creating Column to hold runner advancement codes 
+    filter(Outcome != 'NP') #Remove plays where nothing occurred
+  
+  
+  batter_codes = c('S' = 1, 'D' = 2, 'T' = 3, 
+                 'H' = 4, 'HR' = 4, 'DGR' = 2,
+                 'E' = 1, 'HP' = 1, 'I' = 1, 
+                 'IW' = 1, 'W' = 1, 'C' = 1,
+                 'BK' = 0 , 'DI' = 0, 'SB' = 0,
+                 'PB' = 0, 'WP' = 0)
+                 #'CS' = 0 , 'PO' = 0, 'POCS' = 0, 'OA' = 0) These outcomes should still result in an out so they will not fill batter bases
+
+  #Creating a mapping function to map batter_codes (basically replaces a for loop)
+  #quo saves this condition rather than evaluating it. The !! and !!! are how you actually evaluate this code
+  batter_conditions <- map(names(batter_codes), 
+                           ~quo(str_starts(Outcome, regex(paste(!!.x,"+([0-9]|/|$)", sep="")))~batter_codes[!!.x]))
+  
+  #Applying the batter code condition to the game dataframe
+  game_df <- game_df %>% 
+    mutate(`Batter Bases` = case_when(!!!batter_conditions))
+  
+  
+  
+  #Creating vector to hold indices of new inning (lag from Dplyr is really helpful)
+  new_inning = c(1, which(game_df$`Home Team` != lag(game_df$`Home Team`))) 
+  
+  #Creating three binary variables, First Second and Third to hold runs
+  
+  game_df <- game_df %>% 
+    mutate(`First` = case_when(row_number() %in% new_inning ~ 0,
+                                lag(`Batter Bases`==1) ~ 1,
+                                lag(`Batter Bases`==4) ~ 0),
+           `Second`= case_when(row_number() %in% new_inning ~ 0,
+                               lag(`Batter Bases`==2) & (is.na(`Runner Advancements`)) ~ 1,
+                               lag(`Batter Bases`==4) ~ 0),
+           `Third`= case_when(row_number() %in% new_inning ~ 0,
+                              lag(`Batter Bases`==3) & (is.na(`Runner Advancements`)) ~ 1,
+                              lag(`Batter Bases`==4) ~ 0),
+           Runs = case_when(row_number() %in% new_inning ~ 0,
+                            `Batter Bases`==4 ~ 1))
+  
+  game_df <- game_df %>% 
+  separate(`Runner Advancements`, into = c('Runner Advancements', 
+                                           'Runner Advancements1', 
+                                           'Runner Advancements2', 
+                                           'Runner Advancements3'),"[;]", extra = "merge")
+  
+  game_df <- game_df %>% 
+  mutate(`First` = case_when(   
+                                lag(str_detect(`Runner Advancements3`, "-1")) ~ 1,
+                                lag(str_detect(`Runner Advancements3`, "1-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements2`, "-1")) ~ 1,
+                                lag(str_detect(`Runner Advancements2`, "1-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements1`, "-1")) ~ 1,
+                                lag(str_detect(`Runner Advancements1`, "1-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements`, "-1")) ~ 1,
+                                lag(str_detect(`Runner Advancements`, "1-")) ~ 0,
+
+                             #Stolen bases & Pickoffs
+                             lag(str_detect(Outcome, "SB2")) ~ 0, #Leaves First to Steal Second
+                             lag(str_detect(Outcome, "CS2")) ~ 0, #Caught Stealing at 2nd (includes POCS2)
+                             lag(str_detect(Outcome, "PO1")) ~ 0, #Picked Off of First
+                             TRUE ~ as.numeric(First)),
+                             
+         `Second` = case_when(
+                                lag(str_detect(`Runner Advancements3`, "-2")) ~ 1,
+                                lag(str_detect(`Runner Advancements3`, "2-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements2`, "-2")) ~ 1,
+                                lag(str_detect(`Runner Advancements2`, "2-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements1`, "-2")) ~ 1,
+                                lag(str_detect(`Runner Advancements1`, "2-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements`, "-2")) ~ 1,
+                                lag(str_detect(`Runner Advancements`, "2-")) ~ 0,
+                              
+                              #Stolen Bases & Pickoffs
+                              lag(str_detect(Outcome, "SB2")) ~ 1, #Steals Second
+                              lag(str_detect(Outcome, "SB3")) ~ 0, #Leaves Second to Steal Third
+                              lag(str_detect(Outcome, "CS3")) ~ 0, #Caught Stealing at Third
+                              lag(str_detect(Outcome, "PO2")) ~ 0, #Picked Off of Second
+                              TRUE ~ as.numeric(Second)),
+         
+         `Third` = case_when(
+                                lag(str_detect(`Runner Advancements3`, "-3")) ~ 1,
+                                lag(str_detect(`Runner Advancements3`, "3-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements2`, "-3")) ~ 1,
+                                lag(str_detect(`Runner Advancements2`, "3-")) ~ 0,
+                              
+                                lag(str_detect(`Runner Advancements1`, "-3")) ~ 1,
+                                lag(str_detect(`Runner Advancements1`, "3-")) ~ 0,
+                                
+                                lag(str_detect(`Runner Advancements`, "-3")) ~ 1,
+                                lag(str_detect(`Runner Advancements`, "3-")) ~ 0,
+                              
+                              #Stolen Bases & Pickoffs
+                              lag(str_detect(Outcome, "SB3")) ~ 1, #Steals Third
+                              lag(str_detect(Outcome, "SBH")) ~ 0, #Leaves Third to Steal Home
+                              lag(str_detect(Outcome, "CSH")) ~ 0, #Caught Stealing at Third
+                              lag(str_detect(Outcome, "PO3")) ~ 0, #Picked Off of Third
+                              TRUE ~ as.numeric(Third)),
+         
+         `Runs` = case_when((lag(str_detect(`Runner Advancements`, "(-H)")) | 
+                            lag(str_detect(`Runner Advancements1`, "(-H)")) |
+                            lag(str_detect(`Runner Advancements2`, "(-H)")) |
+                            lag(str_detect(`Runner Advancements3`, "(-H)"))) ~ 
+                            
+                            sum(as.numeric(lag(str_detect(`Runner Advancements`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements1`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements2`,"(-H)"))),
+                            as.numeric(lag(str_detect(`Runner Advancements3`,"(-H)"))), na.rm=TRUE),
+                            
+                            #Stolen Bases
+                            lag(str_detect(Outcome, "SBH")) ~ 1,
+                            TRUE ~ as.numeric(Runs))) %>% 
+  fill(First, Second, Third, .direction="down") %>% 
+  mutate(Runs = ifelse(is.na(Runs), 0, Runs))
+  
+  
+  
+  game_df <- game_df %>% 
+  group_by(Inning, `Home Team`) %>% 
+  mutate(Outs = cumsum(is.na(`Batter Bases`))-1,
+         `Inning Runs` = sum(Runs))
+
+  game_df$Outs = case_when(game_df$Outs<0 ~ 0, TRUE ~ as.numeric(game_df$Outs))
+  
+  
+  agg_df <- expand(game_df, nesting(First, Second, Third, Outs, `Inning Runs`))
+  
+  
+  return(agg_df)
+}
+
 ```
 
+
+
+```{r calling game function}
+get_results(ANA_list[[1]])
+```
 
