--- a/Getting_Full_Dataset.rmd
+++ b/Getting_Full_Dataset.rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r loading_pacakages}
 library(tidyverse)
 library(data.table)
+library(assertr)
 options(warn=-1)
 ```
 
@@ -53,13 +54,25 @@ get_results <- function(game_codes){
   
   plays = str_subset(game_codes, 'play')
 
-  game_df = read_csv(plays, col_names = c('Play', 
-                                'Inning', 
-                                'Home Team', 
-                                'Retro ID', 
-                                'Count on Play', 
-                                'Pitch Sequence',
-                                'Outcome'))
+  #Works on GVSU R Server not on Laptop?
+  # game_df = read_csv(plays, col_names = c('Play', 
+  #                               'Inning', 
+  #                               'Home Team', 
+  #                               'Retro ID', 
+  #                               'Count on Play', 
+  #                               'Pitch Sequence',
+  #                               'Outcome'))
+  
+  #Works on Laptop
+  game_df <- as.tibble(plays) %>% 
+    separate(value, into=c('Play', 
+                           'Inning', 
+                           'Home Team', 
+                           'Retro ID', 
+                           'Count on Play', 
+                           'Pitch Sequence',
+                           'Outcome'), 
+              sep=',')
   
   game_df <- game_df %>% 
     separate(Outcome, into = c('Outcome', 'Runner Advancements'),"[.]", extra = "merge") %>% #Creating Column to hold runner advancement codes 
@@ -71,13 +84,13 @@ get_results <- function(game_codes){
                  'E' = 1, 'HP' = 1, 'I' = 1, 
                  'IW' = 1, 'W' = 1, 'C' = 1,
                  'BK' = 0 , 'DI' = 0, 'SB' = 0,
-                 'PB' = 0, 'WP' = 0)
+                 'PB' = 0, 'WP' = 0, 'OA'=0)
                  #'CS' = 0 , 'PO' = 0, 'POCS' = 0, 'OA' = 0) These outcomes should still result in an out so they will not fill batter bases
 
   #Creating a mapping function to map batter_codes (basically replaces a for loop)
   #quo saves this condition rather than evaluating it. The !! and !!! are how you actually evaluate this code
   batter_conditions <- map(names(batter_codes), 
-                           ~quo(str_starts(Outcome, regex(paste(!!.x,"+([0-9]|/|$)", sep="")))~batter_codes[!!.x]))
+                           ~quo(str_starts(Outcome, regex(paste(!!.x,"+([0-9]|/|$)|E|(W+)|(SBH;)", sep="")))~batter_codes[!!.x]))
   
   #Applying the batter code condition to the game dataframe
   game_df <- game_df %>% 
@@ -169,7 +182,12 @@ get_results <- function(game_codes){
          
   fill(First, Second, Third, .direction="down")
   
-  
+  #OUTS ERROR TESTING
+  game_df <- game_df %>% 
+    mutate(`Batter Bases` = case_when((str_detect(`Runner Advancements`, "B")) | 
+                                    (str_detect(`Runner Advancements1`, "B")) |
+                                    (str_detect(`Runner Advancements2`, "B")) |
+                                    (str_detect(`Runner Advancements3`, "B")) ~ 1, TRUE ~ as.numeric(`Batter Bases`)))
   
   game_df <- game_df %>% 
     group_by(Inning, `Home Team`) %>% 
@@ -180,9 +198,16 @@ get_results <- function(game_codes){
                               as.numeric(str_detect(`Runner Advancements3`,"(-H)")),
                               str_detect(Outcome, "SBH"), (`Batter Bases`==4), #Steals of Home and Home Runs
                               na.rm=TRUE))
-  stopifnot(game_df$Outs >=3)
-  game_df$Outs = case_when(game_df$Outs<0 ~ 0, TRUE ~ as.numeric(game_df$Outs))
   
+  game_df$Outs = case_when(game_df$Outs<0 ~ 0, TRUE ~ as.numeric(game_df$Outs))
+
+  #OUTS ERROR TESTING - NOTICED ERRORS WERE NOT WORKING
+  ind = ((game_df$Outs >= 3) | (game_df$Outs<0))
+  if(nrow(game_df[ind,])>0){
+    print(game_df %>% 
+            select(c(Outcome, `Runner Advancements`, `Runner Advancements1`, `Batter Bases`,
+                                    First, Second, Third, `Inning Runs`, Outs)))
+  }
   
   agg_df <- expand(game_df, nesting(First, Second, Third, Outs, `Inning Runs`))
   
