--- a/Run Expectancy App.Rmd
+++ b/Run Expectancy App.Rmd
@@ -14,7 +14,7 @@ library(shiny)
 ```
 
 ```{r Importing Data, echo=FALSE}
-(df <- read_csv(here::here('~/STA 518/STA518_Project/Results/Seaon Total Innings.csv')))
+df <- read_csv(here::here('~/STA 518/STA518_Project/Results/Seaon Total Innings.csv'))
 ```
 
 ```{r combine runners, echo=FALSE}
@@ -31,93 +31,110 @@ df <- df %>%
                              Onbase == '0_0_1' ~ "Third",
                              Onbase == '1_1_1' ~ "Bases Loaded"))
 
-df
 ```
 
 
 ```{r Run_inputs, echo=FALSE}
-inputPanel(
-  sliderInput("n_inning", label = "Inning:",
-              min = 1, max = 9, value = 1, step = 1),
+ui <- fluidPage(
+  theme = bslib::bs_theme(bootswatch = "flatly"),
+  titlePanel(
+    "Run Expectancy"
+  ),
   
-  selectInput("top_or_bot", label = "Top or Bottom of Inning:",
-              choices = c('Top', 'Bottom'), selected = 'Top'),
+  sidebarLayout(
+    
+    sidebarPanel(
+      "Selections",
+  # sliderInput("n_inning", label = "Inning:",
+  #             min = 1, max = 9, value = 1, step = 1),
   
-  selectInput("n_outs", label = "Number of Outs:",
-              choices = c(0, 1, 2), selected = 0),
+  radioButtons("top_or_bot", label = "Top or Bottom of Inning:",
+              choices = c('Top', 'Bottom')),
+  
+  radioButtons("n_outs", label = "Number of Outs:",
+              choices = c(0, 1, 2)),
   
   selectInput("base_runners", label = "Base Runners:",
               choices = c('No Runners','First', 'Second', 'Third', 'First and Second',
-                          'First and Third', 'Second and Third', 'Bases Loaded'), selected = "No Runners"),
-)
-
-
-dataInput <- reactive({ getSymbols(input$symb, src = "yahoo",
-        from = input$dates[1],
-        to = input$dates[2],
-        auto.assign = FALSE)
-#   print(input$base_runners)
-#   
-# if((input$base_runners=="No Runners")){
-#   runners='0_0_0'
-# }else if(input$base_runners=='First'){
-#   runners='1_0_0'
-# }else if(input$base_runners=='First and Second'){
-#   runners='1_1_0'
-# }else if(input$base_runners=='First and Third'){
-#   runners='1_0_1'
-# }else if(input$base_runners=='Second'){
-#   runners='0_1_0'
-# }else if(input$base_runners=='Second and Third'){
-#   runners='0_1_1'
-# }else if(input$base_runners=='Third'){
-#   runners='0_0_1'
-# }else if(input$base_runners=='Bases Loaded'){
-#   runners='1_1_1'
-# }
-
-# df %>% 
-#   filter((Inning == input$n_inning) &
-#          (top_bot == input$top_or_bot) &
-#          (Outs == input$n_outs) &
-#          (runners == input$base_runners)) %>% 
-#   select(`Inning Runs`)
-
-# 
-#   hist(plot_data$`Inning Runs`, probability = TRUE,
-#        xlab = "Runs in Inning", main = "Run Expectancy")
-
-  # dens <- density(faithful$eruptions, adjust = input$bw_adjust)
-  # lines(dens, col = "blue")
-})
-# print(plot_data)
-renderPlot({
-  hist(dataInput(), probability = TRUE,
-       xlab = "Runs in Inning", main = "Run Expectancy")
-})
-
-```
-
-
-
-## Embedded Application
-
-It's also possible to embed an entire Shiny application within an R Markdown document using the `shinyAppDir` function. This example embeds a Shiny application located in another directory:
-
-```{r tabsets, echo=FALSE}
-shinyAppDir(
-  system.file("examples/06_tabsets", package = "shiny"),
-  options = list(
-    width = "100%", height = 550
+                          'First and Third', 'Second and Third', 'Bases Loaded'), selected = "No Runners")
+    ),
+  
+  mainPanel(
+      plotOutput("plot")
+      # tabPanel(tableOutput("static"))
+    )
   )
 )
+
+
+server <- function(input, output, session){
+  output$panel <- renderText({
+    paste("Current panel: ", input$tabset)
+  })
+  
+  output$static <- renderTable(head(df %>% 
+    filter(
+      #(Inning == input$n_inning) &
+           (top_bot == input$top_or_bot) &
+           (Outs == input$n_outs) &
+           (runners == input$base_runners)) %>%
+    select(`Inning Runs`)))
+
+  output$plot <- renderPlot(
+    ggplot(
+      df %>% 
+        filter(
+          # (Inning == input$n_inning) &
+             (top_bot == input$top_or_bot) &
+             (Outs == input$n_outs) &
+             (runners == input$base_runners)) %>%
+        select(`Inning Runs`),
+      aes(x=`Inning Runs`)) +
+      geom_histogram() +
+      geom_density()
+  )
+}
+
+
+
 ```
 
-Note the use of the `height` parameter to determine how much vertical space the embedded application should occupy.
+```{r}
 
-You can also use the `shinyApp` function to define an application inline rather then in an external directory.
+df <- df %>% 
+  mutate(`Scored` = if_else(`Inning Runs` >= 1,TRUE,FALSE))
 
-In all of R code chunks above the `echo = FALSE` attribute is used. This is to prevent the R code within the chunk from rendering in the document alongside the Shiny components.
+
+df_group <- df %>% 
+  group_by(First, Second, Third, Outs) %>% 
+  summarise(Runs = sum(`Inning Runs`),
+         Occurences = n(),
+         `Probabilty of Scoring` = mean(Scored))
+    
+df_group <- df_group %>%  
+  mutate(`Runs Expected` = Runs/Occurences) %>% 
+  unite(Onbase, First:Third) 
+
+runs_expected_matrix <- df_group %>% 
+  pivot_wider(id_cols=Onbase, names_from=Outs, values_from=`Runs Expected`, names_prefix='Outs: ', names_sep=' ') %>% 
+  arrange(desc('Outs: 0'))
+  
+
+run_prob_matrix <- df_group %>% 
+  pivot_wider(id_cols=Onbase, names_from=Outs, values_from=`Probabilty of Scoring`, names_prefix='Outs: ', names_sep=' ')
+
+p <- df_group %>% 
+  ggplot(aes(y=Onbase, fill=`Probabilty of Scoring`, x=Outs))+
+  geom_tile()
+ggplotly(p)
+
+```
+
+```{r echo=FALSE}
+shinyApp(ui, server)
+```
+
+
 
 
 
